--- a/src/components/ContactPage/contact.css
+++ b/src/components/ContactPage/contact.css
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-attachment:fixed;
   background-size: cover;
+  overflow: auto;
   /* background:black; */
 }
 /*SOCIAL button */
