--- a/src/components/MainComponent/footer.css
+++ b/src/components/MainComponent/footer.css
@@ -1,6 +1,6 @@
 .footer {
-  overflow: hidden;
-  position: sticky;
+  overflow: auto;
+  
   background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0.1));
   backdrop-filter: blur(100px); 
   -webkit-backdrop-filter: blur(100px);
