--- a/src/components/MainComponent/header.css
+++ b/src/components/MainComponent/header.css
@@ -1,7 +1,7 @@
 
 .navbar {
-  overflow: hidden;
-  position: sticky;
+  overflow: auto;
+  
   background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0.1));
   backdrop-filter: blur(100px); 
   -webkit-backdrop-filter: blur(100px);
@@ -9,6 +9,7 @@
   border:1px solid rgba(255,255,255,0.18);
   box-shadow:0 8px 32px 0 rgba(0,0,0,0.37);
   width:100%;
+
 
 }
 .glass {
