--- a/src/components/ProjectsPage/projects.css
+++ b/src/components/ProjectsPage/projects.css
@@ -4,7 +4,7 @@ background: url('./Media/projectspage.jpg');
 background-repeat: no-repeat;
 background-attachment:fixed;
 background-size: cover;
-
+overflow: auto;
 width: 100%;
 }
 .projects-container{
